Fix popup truncated on mobile

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -469,9 +469,9 @@ div#post-content img {
 
 @media screen and (max-width: 700px){
   .sp-link{
-    width: 70%;
+    width: 90%;
   }
   .sp-pop{
-    width: 70%;
+    width: 90%;
   }
 }
